--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "veda-verse-backend-api",
+  "name": "flower-blossom",
   "version": "1.0.0",
-  "description": "The api for the VedaVerse bookstore project.",
+  "description": "flower shop",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Gaurab Khadka",
+  "author": "Shreesha shrestha",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.3",
@@ -15,7 +15,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
-    "zod": "^4.3.4"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
